--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body id="bootstrap-override">
     <main>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./img/cutiepies-logo-red.png" alt="brand">
@@ -50,7 +50,11 @@
         </nav>
         <a name="order"></a>
         <div class="order">
-
+            <div class="content container-lg">
+                <h1>You wanna<br>pizza me?</h1>
+                <span>Order Now Online</span><br>
+                <button type="button" class="btn"><a href="https://order.online/store/cutie-pies-pizza-860449/en-US">Order Now</a></button>
+            </div>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
