--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="scss/style.css" rel="stylesheet" />
+    <script src="js/carousel.js" defer></script>
     <title>CutiePies</title>
 </head>
 
@@ -53,7 +54,76 @@
             <div class="content container-lg">
                 <h1>You wanna<br>pizza me?</h1>
                 <span>Order Now Online</span><br>
-                <button type="button" class="btn"><a href="https://order.online/store/cutie-pies-pizza-860449/en-US">Order Now</a></button>
+                <button type="button" class="btn"><a
+                        href="https://order.online/store/cutie-pies-pizza-860449/en-US">Order Now</a></button>
+            </div>
+        </div>
+        <div class="">
+            <div class="row mx-auto my-auto justify-content-center">
+                <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="./img/slider/delivery-info.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="./img/slider/full-menu.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="./img/slider/cowboys.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="./img/slider/two-for-one-tuesdays.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="./img/slider/social-post.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <div class="card-img">
+                                        <img src="./img/slider/safety-info.jpg" class="img-fluid">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#recipeCarousel" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-ico" aria-hidden="true"><img src="./img/prev.png"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#recipeCarousel" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-ico" aria-hidden="true"><img src="./img/next.png"></span>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
