added mobile style to order

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         </nav>
         <a name="order"></a>
         <div class="order">
+            <div class="bcground--mobile"></div>
             <div class="content container-lg">
                 <h1>You wanna<br>pizza me?</h1>
                 <span>Order Now Online</span><br>
