--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         href="https://order.online/store/cutie-pies-pizza-860449/en-US">Order Now</a></button>
             </div>
         </div>
-        <div class="">
+        <div class="slider">
             <div class="row mx-auto my-auto justify-content-center">
                 <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner" role="listbox">
