added menu section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a href="#order" class="nav-link">Order</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Menu</a>
+                            <a href="#menu" class="nav-link">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Reservations</a>
@@ -125,6 +125,16 @@
                         <span class="carousel-control-next-ico" aria-hidden="true"><img src="./img/next.png"></span>
                     </a>
                 </div>
+            </div>
+        </div>
+        <a name="menu"></a>
+        <div class="menu">
+            <div class="bcground__menu--mobile"></div>
+            <div class="content__menu container-lg">
+                <h1>Hungry Yet?</h1>
+                <span>Check Out Our Menu</span><br>
+                <button type="button" class="btn"><a
+                        href="#">View Menu</a></button>
             </div>
         </div>
     </main>
