--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a href="#menu" class="nav-link">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Reservations</a>
+                            <a href="#reservation" class="nav-link">Reservations</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Drinks</a>
@@ -133,8 +133,20 @@
             <div class="content__menu container-lg">
                 <h1>Hungry Yet?</h1>
                 <span>Check Out Our Menu</span><br>
-                <button type="button" class="btn"><a
-                        href="#">View Menu</a></button>
+                <button type="button" class="btn"><a href="#">View Menu</a></button>
+            </div>
+        </div>
+        <a name="reservation"></a>
+        <div class="row reservation">
+            <div class="col-lg-7 reservation__img ">
+                <img src="./img/desktop/cutiepies-pizza-bar.jpg" />
+            </div>
+            <div class="col-lg-5 content__reservation ">
+                <h1>Ready <br> to come <br> try it?</h1>
+                <p>Come on over and check us out!<br> 
+                    Reserveration not needed, but we’ll<br>
+                    be happy to save you a seat.</p><br>
+                <button type="button" class="btn"><a href="#">Reserve a Spot</a></button>
             </div>
         </div>
     </main>
