added cheese section

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
                 <button type="button" class="btn"><a href="#">Reserve a Spot</a></button>
             </div>
         </div>
+        <div class="cheese"></div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
