added drinks sections

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <a href="#reservation" class="nav-link">Reservations</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Drinks</a>
+                            <a href="#drinks" class="nav-link">Drinks</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Parties</a>
@@ -150,6 +150,14 @@
             </div>
         </div>
         <div class="cheese"></div>
+        <a name="drinks"></a>
+        <div class="drinks">
+            <div class="content__drinks container-lg">
+                <h1>More than <br> just food</h1>
+                <p>Pizza is great, but pizza & drinks <br> together is perfection!</p><br>
+                <button type="button" class="btn"><a href="#">Drink Menu</a></button>
+            </div>
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
