added happy hour section

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="col-lg-5 content__reservation ">
                 <h1>Ready <br> to come <br> try it?</h1>
-                <p>Come on over and check us out!<br> 
+                <p>Come on over and check us out!<br>
                     Reserveration not needed, but we’ll<br>
                     be happy to save you a seat.</p><br>
                 <button type="button" class="btn"><a href="#">Reserve a Spot</a></button>
@@ -156,6 +156,15 @@
                 <h1>More than <br> just food</h1>
                 <p>Pizza is great, but pizza & drinks <br> together is perfection!</p><br>
                 <button type="button" class="btn"><a href="#">Drink Menu</a></button>
+            </div>
+        </div>
+        <div class="happy_hour">
+            <div class="content">
+                <h1>Happy Hour</h1>
+                <span>
+                    <p class="p__styled">Mon-Fri 4-7 ———-</p>
+                    <p>$4 Wells & House Wines <br> 1/2 Off Craft Cocktails & Appetizers</p>
+                </span>
             </div>
         </div>
     </main>
