added parties section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a href="#drinks" class="nav-link">Drinks</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Parties</a>
+                            <a href="#parties" class="nav-link">Parties</a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">Contact</a>
@@ -165,6 +165,18 @@
                     <p class="p__styled">Mon-Fri 4-7 ———-</p>
                     <p>$4 Wells & House Wines <br> 1/2 Off Craft Cocktails & Appetizers</p>
                 </span>
+            </div>
+        </div>
+        <a name="parties"></a>
+        <div class="row parties">
+            <div class="col-lg-5 content__parties ">
+                <h1>PLANNING A <br> PIZZA PARTY?</h1>
+                <p>Sit back, relax, and let us help you<br>
+                    throw the perfect private party!</p><br>
+                <button type="button" class="btn"><a href="#">Book Now</a></button>
+            </div>
+            <div class="col-lg-7 parties__img ">
+                <img src="./img/desktop/cutiepies-restaurant.jpg" />
             </div>
         </div>
     </main>
