added story section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
                 <img src="./img/desktop/cutiepies-restaurant.jpg" />
             </div>
         </div>
+        <div class="row story">
+            <div class="col-lg-7 story__img ">
+                <img src="./img/desktop/cutiepies-banner.jpg" />
+            </div>
+            <div class="col-lg-5 content__story ">
+                <h1>Our story</h1>
+                <p>Opened in 2019 in Uptown Dallas, CutiePies Pizza & Bar is the culmination 
+                    of years of thought and research by a handful of pizza enthusiasts on a quest
+                     to create the perfect pie. We all agree that pizza is life, so we traveled all 
+                     around and tasted every combination of dough, crust, toppings, and type of oven 
+                     imaginable. We think we came up with something kinda special and have the perfect
+                      casual environment to showcase our creation. But hey, it’s just pizza 
+                      (and other good stuff), so relax, kick back, have a slice of the good life, 
+                      and let us show you our take on your favorite dish.</p><br>
+            </div>
+        </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
