added fixed to nav

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body id="bootstrap-override">
     <main>
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
                     <img src="./img/cutiepies-logo-red.png" alt="brand">
