--- a/index.html
+++ b/index.html
@@ -185,16 +185,29 @@
             </div>
             <div class="col-lg-5 content__story ">
                 <h1>Our story</h1>
-                <p>Opened in 2019 in Uptown Dallas, CutiePies Pizza & Bar is the culmination 
+                <p>Opened in 2019 in Uptown Dallas, CutiePies Pizza & Bar is the culmination
                     of years of thought and research by a handful of pizza enthusiasts on a quest
-                     to create the perfect pie. We all agree that pizza is life, so we traveled all 
-                     around and tasted every combination of dough, crust, toppings, and type of oven 
-                     imaginable. We think we came up with something kinda special and have the perfect
-                      casual environment to showcase our creation. But hey, it’s just pizza 
-                      (and other good stuff), so relax, kick back, have a slice of the good life, 
-                      and let us show you our take on your favorite dish.</p><br>
+                    to create the perfect pie. We all agree that pizza is life, so we traveled all
+                    around and tasted every combination of dough, crust, toppings, and type of oven
+                    imaginable. We think we came up with something kinda special and have the perfect
+                    casual environment to showcase our creation. But hey, it’s just pizza
+                    (and other good stuff), so relax, kick back, have a slice of the good life,
+                    and let us show you our take on your favorite dish.</p><br>
             </div>
         </div>
+        <footer>
+            <div class="content">
+                <p class="p__styled">2916 McKinney Ave, Dallas, TX 75204 <br>
+                    (214) 238-6348</p>
+                <p>We're Open: <br>
+                    Monday - Saturday: 4pm - 2am <br>
+                    Sunday: 11am - 2am</p>
+            </div>
+            <span>Copyright © 2021 CutiePies Pizza. Used for learning.
+                <a href="#" class="a__styled"><img src="./img/fb.png" alt="fb"></a>
+                <a href="#"><img src="./img/insta.png" alt="instagram"></a>
+            </span>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
