added drinks menu

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="content__drinks container-lg">
                 <h1>More than <br> just food</h1>
                 <p>Pizza is great, but pizza & drinks <br> together is perfection!</p><br>
-                <button type="button" class="btn"><a href="#">Drink Menu</a></button>
+                <button type="button" class="btn"><a href="./drinks.html">Drink Menu</a></button>
             </div>
         </div>
         <div class="happy_hour">
