added links to nav in drinks menu

--- a/drinks.html
+++ b/drinks.html
@@ -28,15 +28,15 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarToggleExternalContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a href="#order" class="nav-link">Order</a>
+                            <a href="https://order.online/store/location-860449/en-US/?utm_source=dd-partner-link" class="nav-link">Order</a>
                         </li>
                         <li class="nav-item">
                             <a href="#menu" class="nav-link">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#reservation" class="nav-link">Reservations</a>
+                            <a href="https://www.opentable.com/restref/client/?restref=1068667&lang=en-US&ot_source=Restaurant%20website&corrid=1316bfdf-af5d-4998-8c69-c53f7bd2eea5" class="nav-link">Reservations</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a href="#drinks" class="nav-link">Drinks</a>
                         </li>
                         <li class="nav-item">
