added contact site

--- a/contact.html
+++ b/contact.html
@@ -36,22 +36,43 @@
                         <li class="nav-item">
                             <a href="https://www.opentable.com/restref/client/?restref=1068667&lang=en-US&ot_source=Restaurant%20website&corrid=1316bfdf-af5d-4998-8c69-c53f7bd2eea5" class="nav-link">Reservations</a>
                         </li>
-                        <li class="nav-item active">
-                            <a href="#drinks" class="nav-link">Drinks</a>
+                        <li class="nav-item">
+                            <a href="./drinks.html" class="nav-link">Drinks</a>
                         </li>
                         <li class="nav-item">
                             <a href="#parties" class="nav-link">Parties</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="./contact.html" class="nav-link">Contact</a>
+                        <li class="nav-item active">
+                            <a href="#" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="drinksContent">
-            <img src="./img/desktop/cutiepies-touchless-drink-menu-2.jpg" alt="drink_menu">
+        <div class="contentContact">
+            <h1>Contact<br> us</h1>
+            <form>
+                <input type="text" class="form__input" placeholder="First Name*" required>
+                <input type="text" class="form__input" placeholder="Last Name*" required> <br>
+                <input type="email" class="form__input" placeholder="Email Address*" required>
+                <input type="phone" class="form__input" placeholder="Phone Number"> <br>
+                <textarea name="message" class="form__textarea form__input" placeholder="Message"></textarea>
+                <button class="btn">Submit</button>
+            </form>
         </div>
+        <footer>
+            <div class="content">
+                <p class="p__styled">2916 McKinney Ave, Dallas, TX 75204 <br>
+                    (214) 238-6348</p>
+                <p>We're Open: <br>
+                    Monday - Saturday: 4pm - 2am <br>
+                    Sunday: 11am - 2am</p>
+            </div>
+            <span>Copyright © 2021 CutiePies Pizza. Used for learning.
+                <a href="#" class="a__styled"><img src="./img/fb.png" alt="fb"></a>
+                <a href="#"><img src="./img/insta.png" alt="instagram"></a>
+            </span>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
