--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a href="#parties" class="nav-link">Parties</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="./contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
