added parties site

--- a/drinks.html
+++ b/drinks.html
@@ -40,7 +40,7 @@
                             <a href="#drinks" class="nav-link">Drinks</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#parties" class="nav-link">Parties</a>
+                            <a href="./parties.html" class="nav-link">Parties</a>
                         </li>
                         <li class="nav-item">
                             <a href="./contact.html" class="nav-link">Contact</a>
