--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 <h1>PLANNING A <br> PIZZA PARTY?</h1>
                 <p>Sit back, relax, and let us help you<br>
                     throw the perfect private party!</p><br>
-                <button type="button" class="btn"><a href="#">Book Now</a></button>
+                <button type="button" class="btn"><a href="./parties.html">Book Now</a></button>
             </div>
             <div class="col-lg-7 parties__img ">
                 <img src="./img/desktop/cutiepies-restaurant.jpg" />
