--- a/parties.html
+++ b/parties.html
@@ -39,23 +39,32 @@
                         <li class="nav-item">
                             <a href="./drinks.html" class="nav-link">Drinks</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="./parties.html" class="nav-link">Parties</a>
-                        </li>
                         <li class="nav-item active">
-                            <a href="#" class="nav-link">Contact</a>
+                            <a href="#parties" class="nav-link">Parties</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./contact.html" class="nav-link">Contact</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="contentContact">
-            <h1>Contact<br> us</h1>
+        <div class="contentParties">
+            <div class="partiesInfo">
+                <h1>Event<br> bookings</h1>
+                <p class="mainInfo">CutiePies Pizza & Bar is the perfect special events venue to host any type of gathering!</p>
+                <p class="primaryInfo">With our state-of-the-art sound system and over-sized TV wall, we can help work with you to host a seamless event from start to finish.</p>
+            </div>
+            
             <form>
-                <input type="text" class="form__input" placeholder="First Name*" required>
-                <input type="text" class="form__input" placeholder="Last Name*" required> <br>
+                <input type="text" class="form__input" placeholder="Full Name*" required>
+                <input type="number" class="form__input" placeholder="Number of Guests*" required> <br>
                 <input type="email" class="form__input" placeholder="Email Address*" required>
-                <input type="phone" class="form__input" placeholder="Phone Number"> <br>
+                <input type="number" class="form__input" placeholder="Start Time*" required> <br>
+                <input type="phone" class="form__input" placeholder="Phone Number*" required>
+                <input type="number" class="form__input" placeholder="End Time*" required> <br>
+                <input type="text" class="form__input" placeholder="Date of Inquiry*" required>
+                <input type="text" class="form__input" placeholder="Type of Event*" required><br>
                 <textarea name="message" class="form__textarea form__input" placeholder="Message"></textarea>
                 <button class="btn">Submit</button>
             </form>
