--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
                             <a href="https://order.online/store/location-860449/en-US/?utm_source=dd-partner-link" class="nav-link">Order</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#menu" class="nav-link">Menu</a>
+                            <a href="./menu.html" class="nav-link">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a href="https://www.opentable.com/restref/client/?restref=1068667&lang=en-US&ot_source=Restaurant%20website&corrid=1316bfdf-af5d-4998-8c69-c53f7bd2eea5" class="nav-link">Reservations</a>
