--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="content__menu container-lg">
                 <h1>Hungry Yet?</h1>
                 <span>Check Out Our Menu</span><br>
-                <button type="button" class="btn"><a href="#">View Menu</a></button>
+                <button type="button" class="btn"><a href="./menu.html">View Menu</a></button>
             </div>
         </div>
         <a name="reservation"></a>
@@ -146,7 +146,7 @@
                 <p>Come on over and check us out!<br>
                     Reserveration not needed, but we’ll<br>
                     be happy to save you a seat.</p><br>
-                <button type="button" class="btn"><a href="#">Reserve a Spot</a></button>
+                <button type="button" class="btn"><a href="https://www.opentable.com/restref/client/?restref=1068667&lang=en-US&ot_source=Restaurant%20website&corrid=4b7befdc-91a0-42a3-a641-8f1db4a21e84">Reserve a Spot</a></button>
             </div>
         </div>
         <div class="cheese"></div>
