--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
                                 class="nav-link">Reservations</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#drinks" class="nav-link">Drinks</a>
+                            <a href="./drinks.html" class="nav-link">Drinks</a>
                         </li>
                         <li class="nav-item">
                             <a href="./parties.html" class="nav-link">Parties</a>
