--- a/menu.html
+++ b/menu.html
@@ -270,8 +270,8 @@
                     Sunday: 11am - 2am</p>
             </div>
             <span>Copyright © 2021 CutiePies Pizza. Used for learning.
-                <a href="#" class="a__styled"><img src="./img/fb.png" alt="fb"></a>
-                <a href="#"><img src="./img/insta.png" alt="instagram"></a>
+                <a href="https://www.facebook.com/CutiePiesPizza/" class="a__styled"><img src="./img/fb.png" alt="fb"></a>
+                <a href="https://www.instagram.com/cutiepiespizza/"><img src="./img/insta.png" alt="instagram"></a>
             </span>
         </footer>
     </main>
